Made filehandler classes